# CPE_CPool_2017

./: README.md
Days/CPool_Day01_2017/: mr_clean  prepare_my_repo.sh  push_that.sh
Days/CPool_Day02_2017/: count_files.sh  gotta_catch_them_all.sh  how_many_are_we.sh  looneytised.sh  r_tacpy.sh  skip.sh
Days/CPool_Day03_2017/: .gitignore  my_isneg.c  my_print_alpha.c  my_print_comb.c  my_print_comb2.c  my_print_digits.c  my_print_revalpha.c  my_put_nbr.c
Days/CPool_Day04_2017/: .gitignore  my_evil_str.c  my_putstr.c  my_sort_int_array.c  my_strlen.c
Days/CPool_Day05_2017/: .gitignore  my_compute_factorial_it.c  my_compute_factorial_rec.c  my_compute_power_it.c  my_compute_square_root.c
Days/CPool_Day06_2017/: .gitignore  my_getnbr_base.c  my_putnbr_base.c  my_showmem.c  my_showstr.c  my_str_isalpha.c  my_str_islower.c  my_strcmp.c  my_strcpy.c  my_strncmp.c  my_strncpy.c
Days/CPool_Day07_2017/: my_strcat.c
Days/CPool_Day08_2017/: concat_params.c  my_strdup.c
Days/CPool_Day09_2017/: .gitignore  get_color.c  my_params_to_array.c  my_show_param_array.c  swap_endian_color.c
Days/CPool_Day11_2017/: .gitignore  my_apply_on_nodes.c  my_list_size.c  my_params_to_list.c  my_rev_list.c
Days/CPool_Day13_2017/: create_windows.c
Projects/CPool_Tree_2017/: tree.c
Projects/CPool_bistro-matic_2017/: .gitignore  Makefile
Projects/CPool_infinadd_2017/: .gitignore  CMakeLists.txt  Makefile  infin_add.c
Projects/CPool_infinadd_2017/include/: infin_add.h
Projects/CPool_infinadd_2017/test_files/: main.c
Projects/CPool_infinadd_2017/tests/: tests.c
(+134 files in other folders)
